# lesserpandas

./: .gitignore  LICENSE.txt  README.md  benchmark_results.md  pyproject.toml  test_run.py
.github/workflows/: publish.yml  test.yml
src/: __init__.py  concat.py  core.py  groupby.py  indexing.py  io.py  merge.py  series.py
tests/: conftest.py  test_concat.py  test_core.py  test_etl.py  test_io.py  test_merge_groupby.py  test_series.py
tools/: benchmark.py  build_monolith.py
